--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,10 +1,10 @@
 backend:
   name: github
-  repo: muneesmohammed333/myproject   # 🔹 Your GitHub repo
+  repo: muneesmohammed333/myproject   # your GitHub repo
   branch: main
 
-media_folder: "images/uploads"        # where uploaded images are stored
-public_folder: "/images/uploads"      # public path
+media_folder: "images/uploads"
+public_folder: "/images/uploads"
 
 collections:
   - name: "pages"
@@ -19,12 +19,10 @@ collections:
 
   - name: "blog"
     label: "Blog"
-    folder: "posts"                   # folder where new blog posts are stored
+    folder: "posts"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Image", name: "image", widget: "image" }
